WebContent/Examples/InValid/InvTemperatureSensor3.jsonld
{
  "description":"Invalid json-ld file because @context is missing, invalid TD because writable of a property is missing. Even if it is not writable it should be specified",
    "@context": [
    "https://w3c.github.io/wot/w3c-wot-td-context.jsonld",
    "https://w3c.github.io/wot/w3c-wot-common-context.jsonld"
  ],
  "name": "myTempSensor",
  "interaction": [
    {
      "@type": [
        "Temperature",
        "Property"
      ],
      "reference": "threshold",
      "name": "myTemp",
      "schema": {
        "type": "number"
      },
      "writable":true,
      "observable": true,
      "form": [
        {
          "href": "coap:///www.example.com:5683/temp/val",
          "mediaType": "application/json"
        }
      ]
    }
  ]
}